Update CATALINA_OPTS with --add-opens and add-exports for Java 17 use